# Eklavya-Copter-Control

./: Basics of Control systems.md  Blog.md  Installations.md  Instructions.md  LICENSE  PID.md  README.md  RotorS MAV modelling Gazebo simulator framework.md  dev_Installations.md  omav_rostopics.txt  tempCodeRunnerFile.cpp
Basic Concepts Required/: PID.md  RotorS MAV modelling Gazebo simulator framework.md
Drone Simulation & Control/: Drones_2.md
PID Control/: PID_4.md
Resources/: Git_GitHub_Basics.md  Markdown_Basics.md
Rotors/: Rotors_1.md
Some Basic Concepts/: Allocation Matrix Derivation.md  Basics of Control systems.md  Fun Quotes.md  Kalman_FIlters.md  Linear algebra.md  Motor mixing.md  PID.md  RotorS MAV modelling Gazebo simulator framework.md
Theory/: Markdown_Basics.md
assets/: Installations.md
firefly_dev/: 2.py  control.py  control_2.py  dynamic_reconfigure.py  fresh_control.py  pid.py  publisher.py  subscriber.py  subscriber2.py
omav_dev/: controller.py  euler_to_quaternion_test.py  force_dec.py  force_desired.py  moment_des.py  moment_desired.py  speed_publisher.py  takeoff.py  test.py  utilities.py
simulation/rotors_gazebo/: CMakeLists.txt
simulation/rotors_gazebo/launch/: Link to firefly_swarm_hovering_example.launch  Link to fixed_wing.launch  Link to fixed_wing_with_joy.launch  mav.launch  mav_hovering_example.launch
simulation/rotors_gazebo/resource/: firefly.yaml
simulation/rotors_gazebo/scripts/: control_omav.py  force_desired.py  moment_desired.py  moment_force_allocation.py  pid_omav.py  speed.py  takeoff.py
(+166 files in other folders)
